# astral-python-template

./: .dockerignore  .env.example  .gitignore  .mise.toml  Dockerfile  README.md  alembic.ini  compose.yaml  lefthook.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20251228_0001_init.py
scripts/: verify_model_registry.py
src/app/: main.py
src/app/api/: router.py
src/app/core/: db.py  logging.py  model_registry.py  problem_details.py  settings.py
src/app/slices/users/: models.py  repo.py  routes.py  schemas.py  service.py
tests/: conftest.py  test_docs.py  test_health.py  test_problem_details.py  test_users_db.py
