[project]
name = "astral-python-template"
version = "0.1.0"
description = "FastAPI backend scaffold (Vertical Slice Architecture)"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlmodel",
  "alembic",
  "psycopg[binary]",
  "pydantic",
  "pydantic-settings",
  "scalar-fastapi",
  "logfire[fastapi]",
]

[dependency-groups]
dev = [
  "ruff",
  "ty",
  "pytest",
  "httpx",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/**/routes.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.13"
root = ["./src"]
python = "./.venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
force-include = { "src/app/py.typed" = "app/py.typed" }
